Taking in use new model for ImportCandidate (#2404)
- Taking in use new model for ImportCandidate
- Mapping new ImportOrganization in scopus-import

Next step will be to make CreatePublicationFromImportHandler to consume
CreatePublicationRequest, instead of ImportCandidate.

---------

Signed-off-by: Kir Truhacev <kir.truhacev@sikt.no>